<resources>
    <string name="app_name">Tucson Arizona</string>
    <string name="tucson_arizona_quiz">Tucson, Arizona Quiz</string>
    <string name="tucson_arizona">Tucson, Arizona</string>
    <string name="days_sunshine">On average, how many days of sunshine does Tucson get per
        year?</string>
    <string name="saguaro_bground">Saguaro Background</string>
    <string name="two_ninety">290</string>
    <string name="three_fifty">350</string>
    <string name="three_thirty">330</string>
    <string name="saguaro_concentration">Tucson is famous for the type of cactus in the background
        image. What is it called?</string>
    <string name="cactus">Cactus</string>
    <string name="tucson_animals">Tucson is home to which animals?</string>
    <string name="gila_monster">gila monster</string>
    <string name="coyote">coyote</string>
    <string name="phoenix">phoenix</string>
    <string name="javelina">javelina</string>
    <string name="clean_air">True or False: Tucson has been rated as having the third cleanest air
        of any city in the United States.</string>
    <string name="True">true</string>
    <string name="False">false</string>
    <string name="zero">0</string>
    <string name="submit">submit</string>
    <string name="toast_one">You scored </string>
    <string name="toast_two"> out of 4 points!</string>
</resources>
