<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.40"
        android:scaleType="centerCrop"
        android:src="@drawable/saguaro"
        android:contentDescription="@string/saguaro_bground"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.example.android.tucsonarizona.MainActivity">

            <TextView
                style="@style/Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tucson_arizona_quiz" />

            <View
                style="@style/Line"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <TextView
                style="@style/Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days_sunshine"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three_thirty"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two_ninety"
                    android:layout_marginLeft="16dp"/>

                <RadioButton
                    android:id="@+id/three_fifty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/three_fifty"
                    android:layout_marginLeft="16dp"/>

            </RadioGroup>

            <View
                style="@style/Line"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <TextView
                style="@style/Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saguaro_concentration"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:focusable="true"
                android:focusableInTouchMode="true"></LinearLayout>

            <EditText
                android:id="@+id/cactus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/cactus"
                android:layout_marginLeft="20dp"
                android:inputType="text"/>

            <View
                style="@style/Line"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <TextView
                style="@style/Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tucson_animals"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20dp">

                <CheckBox
                    android:id="@+id/gila_monster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gila_monster"/>

                <CheckBox
                    android:id="@+id/phoenix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phoenix"/>

                <CheckBox
                    android:id="@+id/coyote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coyote"/>

                <CheckBox
                    android:id="@+id/javelina"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/javelina"/>

            </LinearLayout>

            <View
                style="@style/Line"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <TextView
                style="@style/Body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clean_air"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp">

                <RadioButton
                    android:id="@+id/clean_air"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/True" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/False"
                    android:layout_marginLeft="16dp"/>

            </RadioGroup>

            <View
                style="@style/Line"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

            <TextView
                android:id="@+id/score_text_view"
                style="@style/Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                />

            <Button
                android:id="@+id/submit_quiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_gravity="center"
                android:onClick="SubmitQuiz"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>